2009-11-14  Tobias Liebig <mail_typo3@etobi.de>

	* Fixed bug #12522: t3editor/codecompletion: tsref properties get listed twice when they are defined
	* Fixed bug #12523: t3editor/codecompletion: Gifbuilder TEXT and Gifbuilder IMAGE inside of GMENU_itemState

2009-11-13  Francois Suter  <francois@typo3.org>

	* Fixed bug #12550: Scheduler: Added some space between the sections of the "scheduled tasks"-screen

2009-11-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #4670: htmlArea RTE: Problem when cutting pasting links within table cells or list items

2009-11-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12566: htmlArea RTE: Selecting element from status bar does not work in Safari
	* Fixed bug #12568: htmlArea RTE: Text pasted by Safari is wrapped in span or font tags

2009-11-11  Francois Suter  <francois@typo3.org>

	* Cleanup #12552: Scheduler: Corrected inconsistent use of full stops in language labels

2009-11-11  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12557: Wrong file references and colors in t3skin-extjs theme, missing icon in recycler

2009-11-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12115: htmlArea RTE "Create link" button doesn't become clickable when using keyboard to select text in Safari/Chrome

2009-11-10  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #12487: Inform if page use content_from_pid

2009-11-09  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12345: TCA feature _VALIGN for wizards is broken (Thanks to Tolleiv Nietsch)

2009-11-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #11847: htmlArea RTE displays empty editing area in Opera 10
	* Fixed bug #12534: htmlArea RTE: list creation looses text in Safari

2009-11-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10128: JavaScript error upon login

2009-11-08  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.3.0beta3

2009-11-08  Francois Suter  <francois@typo3.org>
